Instantiate object with constructor